--- a/src/styles.css
+++ b/src/styles.css
@@ -15,6 +15,7 @@ body {
 body, input[text], button {
   color: #888;
   font-family: Cambria, Georgia;
+  background: #f9f9f9;
 }
 a {
   cursor: pointer;
