--- a/src/app/heroes.component.css
+++ b/src/app/heroes.component.css
@@ -45,3 +45,15 @@
   margin-right: .8em;
   border-radius: 4px 0 0 4px;
 }
+button.delete {
+  float: right;
+  top: -4px;
+  right: -1px;
+  margin-top: 2px;
+  margin-right: .8em;
+  background-color: gray !important;
+  color: white;
+  border: 1px solid gray;
+  border-radius: 2px;
+
+}
